Nav looks good and is cleaned up. Fixed overflow issue too

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,13 +1,3 @@
-/* Slide in animation on load */
-@keyframes slideInFromRight {
-  0% {
-    transform: translateX(-100%);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
 @font-face {
   font-family: Flange BQ Italic;
   src: url("../../assets/fonts/Flange\ BQ\ Italic.ttf");
@@ -16,98 +6,84 @@
 .navBar {
   width: 100%;
   position: absolute;
+  left: -20px;
   display: flex;
-  animation: ".5s ease-out 0s 1 slideInFromRight";
   text-decoration: "none";
   z-index: 2;
 }
 
 .leftSide {
-  /* flex: 60%; */
+  display: flex;
+  flex-direction: row;
   justify-content: flex-start;
+  position: absolute;
+  left: 30px;
+}
+
+.navLogo {
+  position: absolute;
+  left: 10px;
+  width: 40px;
+  height: 40px;
 }
 
 .links {
-  transition: 1s;
-  left: 0;
+  position: absolute;
+  display: inline-flex;
+  left: 30px;
+  top: -55px;
   font-size: 30px;
-  display: inline;
-  text-decoration: none;
-  text-align: "center";
-  list-style-type: "none";
 }
 
-li {
-  display: inline-block;
-  margin-right: 0px;
-  color: white;
-}
-
-#beats,
-#services,
-#about,
-#contact {
-  /* padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 30px; */
-  margin-right: 30px;
-  padding: 20px;
-  text-decoration: none;
+.beats,
+.services,
+.about,
+.contact {
+  padding-top: 25px;
+  padding-right: 40px;
+  padding-left: 40px;
   display: inline-block;
   font-family: Flange BQ Italic;
-  color: "white";
-  cursor: "pointer";
+  color: white;
+  cursor: pointer;
 }
 
-#beats:hover,
-#services:hover,
-#about:hover,
-#contact:hover {
-  /* margin-bottom: 40px; */
+.beats:hover,
+.services:hover,
+.about:hover,
+.contact:hover {
   background: linear-gradient(to bottom, #e30613 0%, transparent 100%);
-  /* padding-top: 10px;
-  padding-bottom: 15px;
-  padding-left: 40px;
-  padding-right: 40px; */
+  padding-top: 35px;
+  padding-bottom: 20px;
 }
 
 .rightSide {
-  margin-left: auto;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .instagramNav {
-  width: 30px;
-  height: 30px;
-  padding-left: 30px;
-
+  width: 40px;
+  height: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
   cursor: pointer;
   color: #e30613;
 }
 
-.spotifyNav {
-  width: 30px;
-  height: 30px;
-  padding-left: 30px;
-
-  cursor: pointer;
-  color: #e30613;
-}
-
-.youtubeNav {
-  width: 30px;
-  height: 30px;
-  padding-left: 30px;
-
+.iTunesNav {
+  width: 40px;
+  height: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
   cursor: pointer;
   color: #e30613;
 }
 
 .twitterNav {
-  width: 30px;
-  height: 30px;
-  margin-right: 30px;
-  padding-left: 30px;
+  width: 40px;
+  height: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
   cursor: pointer;
   color: #e30613;
   padding-right: 30px;
